# swiss-school-holidays

./: .gitignore  README.md  pyproject.toml  school_holidays.yaml
data/: AMTOVZ_CSV_LV95.csv  Schulferien.xlsx
swiss-school-holidays/: __init__.py  school_holidays.py
swiss_school_holidays/: __init__.py  school_holidays.py  utils.py
tests/: test_school_holidays.py  test_utils.py
